--- a/Plateshi/Login.xaml
+++ b/Plateshi/Login.xaml
@@ -21,8 +21,8 @@
                     <TextBlock Text="Пароль" Margin="0,20,10,0" HorizontalAlignment="Right"/>
                 </StackPanel>
                 <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Center">
-                <TextBox x:Name="login_TextBox" Text="alampiev_ab_aga" Height="30" Margin="0,0,20,0" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
-                <PasswordBox x:Name="password_Password" Password="alampiev_ab_aga" Height="30" Margin="0,10,20,0" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
+                <TextBox x:Name="login_TextBox" Text="" Height="30" Margin="0,0,20,0" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
+                <PasswordBox x:Name="password_Password" Password="" Height="30" Margin="0,10,20,0" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
                 </StackPanel>
             </Grid>
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
